summative.moria.Moria.scala.error
Erreur de compilation :
Moria:1: error: not found: value Direction
setDirection(Direction.EAST)
             ^Moria:16: error: not found: value Direction
  setDirection(Direction.WEST)
               ^Moria:22: error: not found: value Direction
  setDirection(Direction.EAST)
               ^